Commit : 06/11/2023 - Correctif z-index modale

--- a/css/modal.css
+++ b/css/modal.css
@@ -171,6 +171,7 @@ img {
   width: 100%;
   overflow: auto;
   background-color: rgba(26, 39, 156, 0.4);
+  z-index: 9999;
 }
 
 .content {
